# hackathon-big-berlin-hack

./: .env.example  .env.template  .gitignore  CLAUDE.md  CONFIGURATION_SUMMARY.md  DATABASE_SETUP.md  FIRST_PROMPT.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_CHECKLIST.md  STT_MIGRATION_GUIDE.md  STT_SOLUTION_SUMMARY.md  architecture.md  package-lock.json  package.json  pyproject.toml  requirements.txt  sequence-diagram.puml  voiceai.md
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/claims/: __init__.py  insurant_models.py  models.py  service.py  verification.py
app/dialog/: __init__.py  orchestrator.py  session.py  state_machine.py
app/llm/: __init__.py  client.py  prompts.py  tools.py
app/stt/: __init__.py  gemini_stt.py  google_cloud_stt.py
app/telephony/: __init__.py  media_stream.py  twilio_handler.py
app/tts/: __init__.py  gradium_tts.py
app/utils/: __init__.py  audio.py  language.py
docs/: README.md  architecture.md  audio-pipeline.md  configuration.md  deployment.md  dialog-flow.md  llm-and-tools.md  running-locally.md  telephony.md  testing.md  troubleshooting.md
documentation/: CLAUDE.md  GEMINI_LIVE_API_SOLUTION.md  GEMINI_STT_TROUBLESHOOTING.md  GOOGLE_CLOUD_STT_SETUP.md  GOOGLE_GENAI_MIGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MEDIA_STREAM_INTEGRATION.md  MIGRATION_SUMMARY.md  STT_CONFIGURATION.md  STT_FIX_SUMMARY.md  architecture.md
examples/: policy-info.txt
infra/: DEPLOYMENT.md  Dockerfile  PODMAN.md  docker-compose.podman.yml  docker-compose.yml  reload-podman.sh  start-podman.sh
infra/terraform/: .gitignore  INFRASTRUCTURE.md  Makefile  QUICK_REFERENCE.md  README.md  alb.tf  cache.tf  database.tf  ecr.tf  ecs.tf  main.tf  monitoring.tf  outputs.tf  rds.tf  redis.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
infra/terraform-gcp/: .gitignore  Makefile  README.md  main.tf  terraform.tfvars.example
scripts/: diagnose_gemini.py  diagnose_stt.py  generate_mock_data.py  init_db.py  quick_setup.sh  test_google_cloud_stt.py  test_verification.py  update-ngrok.sh
tests/: __init__.py  conftest.py  test_audio.py  test_dialog_flow.py  test_orchestrator.py
tests/fixtures/: .gitkeep
trainai/: README.md  app.py  downloadDS.py  export_pioneer_training.py  finetune.py  gemini_live_voice_agent.py  howtorun.md  insurance_tools.py  prepRhesisEval.py  prepbitext.py  requirements.txt  runRE.py  schemas.py  testIRDragon  trainURDragon.py
voice-ai-test/: agent.js  gradium.js  gradium_test.py  index.js  package-lock.json  package.json  server.js
