[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-intake-agent"
version = "0.1.0"
description = "Multilingual telephone voice AI agent for inbound problem/complaint intake."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "twilio>=9.0",
    "google-genai>=0.3",
    "gradium>=0.1",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]
plugins = []

[[tool.mypy.overrides]]
module = ["gradium.*", "google.*", "twilio.*"]
ignore_missing_imports = true
